--- a/src/components/sidebar-sm.css
+++ b/src/components/sidebar-sm.css
@@ -38,16 +38,17 @@
 
 .sidebar-sm-nav {
   width: 100%;
-  height: calc(100% - 65px);
-  bottom: 0;
+  min-height: calc(100vh - 65px);
+  top: 65px;
   margin-left: -15px;
   position: absolute;
 
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  justify-content: flex-start;
 
-  background-color: #424E5C;
+  background-color: rgb(26, 28, 31);
   opacity: 0.9;
 }
 
@@ -56,6 +57,7 @@
 
   font-size: 20px;
   color: black;
+  padding-top: 15px;
   padding-left: 30px;
   line-height: 50px;
 }
@@ -64,10 +66,22 @@
   .sidebar-sm {
     min-height: 60px;
   }
+
+  .sidebar-sm-nav {
+    min-height: calc(100vh - 60px);
+    top: 60px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .sidebar-sm {
     min-height: 65px;
+  }
+
+  .sidebar-sm-nav {
+    min-height: calc(30vh - 65px);
+    top: 65px;
+
+    padding-top: 5px;
   }
 }
